# IICW

./: CMakeLists.txt  II.sln  README.md
II/: Board.cpp  Board.h  GameSession.cpp  GameSession.h  II.vcxproj  II.vcxproj.filters  Main.cpp  Player.cpp  Player.h  Utils.h  Word.h  words.txt  wordsFive.txt
II/Dictionary/: words.txt  wordsFive.txt
